--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,4 +9,4 @@ jobs:
         uses: actions/checkout@v3
       
       - name: print hello-word on terminal
-        run: echo '$(hello_world.txt)'
+        run: echo '$(cat hello_world.txt)'
